tests/specs/run/bytes_and_text_imports/dynamic/main_missing_permissions.out
error: Uncaught (in promise) TypeError: Requires read access to "[WILDLINE]non_analyzable.txt", run again with the --allow-read flag
const { default: nonAnalyzableText } = await import(nonAnalyzablePath(), { with: { type: "text" } });
                                       ^
    at async file:///[WILDLINE]/main.ts:7:40
